// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiColorPalettePicker is rendered 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value=""
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            aria-label="aria-label"
            class="euiSuperSelectControl euiFormControlLayout--1icons testClass1 testClass2"
            data-test-subj="test subject string"
            type="button"
          />
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with a selected custom text 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value="custom"
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            aria-label="aria-label"
            class="euiSuperSelectControl euiFormControlLayout--1icons testClass1 testClass2"
            data-test-subj="test subject string"
            type="button"
          >
            Plain text as a custom option
          </button>
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with a selected fixed palette 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value="paletteFixed"
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            aria-label="aria-label"
            class="euiSuperSelectControl euiFormControlLayout--1icons testClass1 testClass2"
            data-test-subj="test subject string"
            type="button"
          >
            <span
              class="euiColorPaletteDisplay euiColorPaletteDisplay--sizeSmall"
            >
              <span
                class="emotion-euiScreenReaderOnly"
              >
                Palette 1
              </span>
              <span
                aria-hidden="true"
                class="euiColorPaletteDisplayFixed__bleedArea"
              >
                <span
                  style="background-color:#1fb0b2;width:20%"
                />
                <span
                  style="background-color:#ffdb6d;width:20%"
                />
                <span
                  style="background-color:#ee9191;width:20%"
                />
                <span
                  style="background-color:#ffffff;width:20%"
                />
                <span
                  style="background-color:#888094;width:20%"
                />
              </span>
            </span>
          </button>
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with a selected gradient palette 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value="paletteLinear"
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            aria-label="aria-label"
            class="euiSuperSelectControl euiFormControlLayout--1icons testClass1 testClass2"
            data-test-subj="test subject string"
            type="button"
          >
            <span
              class="emotion-euiScreenReaderOnly"
            >
              Linear Gradient
            </span>
            <span
              aria-hidden="true"
              class="euiColorPaletteDisplay euiColorPaletteDisplay--sizeSmall"
              style="background:linear-gradient(to right, #1fb0b2 0%, #ffdb6d 25%, #ee9191 50%, #ffffff 75%, #888094 100%)"
            />
          </button>
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with a selected gradient palette with stops 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value="paletteLinearStops"
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            aria-label="aria-label"
            class="euiSuperSelectControl euiFormControlLayout--1icons testClass1 testClass2"
            data-test-subj="test subject string"
            type="button"
          >
            <span
              class="emotion-euiScreenReaderOnly"
            >
              Linear Gradient with stops
            </span>
            <span
              aria-hidden="true"
              class="euiColorPaletteDisplay euiColorPaletteDisplay--sizeSmall"
              style="background:linear-gradient(to right, #54B399 0%, #D36086 53%, #9170B8 74%, #F5A700 100%)"
            />
          </button>
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with the prop selectionDisplay set as title  1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value="paletteFixed"
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            aria-label="aria-label"
            class="euiSuperSelectControl euiFormControlLayout--1icons testClass1 testClass2"
            data-test-subj="test subject string"
            type="button"
          >
            Palette 1
          </button>
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker more props are propagated to each option 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
>
  <div
    class="euiPopover__anchor css-zih94u-render"
  >
    <div>
      <input
        type="hidden"
        value="paletteFixed"
      />
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <button
            aria-haspopup="listbox"
            class="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelect--isOpen__button"
            data-test-subj="colorPalettePicker"
            type="button"
          >
            <span
              class="euiColorPaletteDisplay euiColorPaletteDisplay--sizeSmall"
            >
              <span
                class="emotion-euiScreenReaderOnly"
              >
                Palette 1
              </span>
              <span
                aria-hidden="true"
                class="euiColorPaletteDisplayFixed__bleedArea"
              >
                <span
                  style="background-color: rgb(31, 176, 178); width: 20%;"
                />
                <span
                  style="background-color: rgb(255, 219, 109); width: 20%;"
                />
                <span
                  style="background-color: rgb(238, 145, 145); width: 20%;"
                />
                <span
                  style="background-color: rgb(255, 255, 255); width: 20%;"
                />
                <span
                  style="background-color: rgb(136, 128, 148); width: 20%;"
                />
              </span>
            </span>
          </button>
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
